--- a/SmartPhoneTechAdvisor/SmartPhoneTechAdvisor/SmartPhoneTechAdvisor.csproj
+++ b/SmartPhoneTechAdvisor/SmartPhoneTechAdvisor/SmartPhoneTechAdvisor.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Refit.HttpClientFactory" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
